# docker-sc

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker_image.yml
